--- a/infra.yml
+++ b/infra.yml
@@ -12,6 +12,7 @@ services:
 
   kafka:
     image: apache/kafka-native:3.8.0
+    container_name: kafka
     ports:
       - "9092:9092"
     environment:
