--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -29,6 +29,7 @@ tasks:
   start:
     cmds:
       - "docker pull sivaprasadreddy/ft-feature-service"
+      - "docker pull sivaprasadreddy/ft-notification-service"
       - "docker pull sivaprasadreddy/ft-api-gateway"
       - "docker pull sivaprasadreddy/ft-webapp"
       - "docker compose -f {{.INFRA_DC_FILE}} up -d"
