--- a/apps.yml
+++ b/apps.yml
@@ -38,8 +38,23 @@ services:
       - DB_USERNAME=postgres
       - DB_PASSWORD=postgres
       - OAUTH2_SERVER_URL=http://keycloak:9191
+      - KAFKA_BROKER=kafka:9093
     ports:
       - "8081:8081"
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 700m
+
+  ft-notification-service:
+    image: sivaprasadreddy/ft-notification-service
+    container_name: ft-notification-service
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - KAFKA_BROKER=kafka:9093
+    ports:
+      - "8083:8083"
     restart: unless-stopped
     deploy:
       resources:
