--- a/apps.yml
+++ b/apps.yml
@@ -15,6 +15,19 @@ services:
         limits:
           memory: 700m
 
+  ft-config-server:
+    image: sivaprasadreddy/ft-config-server
+    container_name: ft-config-server
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    ports:
+      - "8888:8888"
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 700m
+
   ft-api-gateway:
     image: sivaprasadreddy/ft-api-gateway
     container_name: ft-api-gateway
