--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -42,6 +42,13 @@ tasks:
       - task: sleep
       - "docker compose -f {{.APPS_DC_FILE}} up -d"
 
+  devstart:
+    cmds:
+      - "./local-build.sh"
+      - "docker compose -f {{.INFRA_DC_FILE}} up -d"
+      - task: sleep
+      - "docker compose -f {{.APPS_DC_FILE}} up -d"
+
   stop:
     cmds:
       - "docker compose -f {{.INFRA_DC_FILE}} -f {{.APPS_DC_FILE}} stop"
