--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -45,6 +45,7 @@ tasks:
   devstart:
     cmds:
       - "./local-build.sh"
+      - task: stop
       - "docker compose -f {{.INFRA_DC_FILE}} up -d"
       - task: sleep
       - "docker compose -f {{.APPS_DC_FILE}} up -d"
