--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -9,7 +9,11 @@ vars:
 tasks:
   default:
     cmds:
-      - task: test
+      - task: build
+
+  build:
+    cmds:
+      - "./local-build.sh"
 
   start_infra:
     cmds:
@@ -44,7 +48,7 @@ tasks:
 
   devstart:
     cmds:
-      - "./local-build.sh"
+      - task: build
       - task: stop
       - "docker compose -f {{.INFRA_DC_FILE}} up -d"
       - task: sleep
