chore: Run GH Actions for PRs
Signed-off-by: K Siva Prasad Reddy <sivaprasadreddy.k@gmail.com>

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -9,7 +9,11 @@ vars:
 tasks:
   default:
     cmds:
-      - task: build
+      - task: test
+
+  test:
+    cmds:
+      - "./test-all.sh"
 
   build:
     cmds:
